--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,8 +32,18 @@ phases:
     commands:
       - echo Post-build phase...
       - echo Verifying build output...
-      - test -f dist/index.html && echo "index.html found" || echo "ERROR: index.html not found"
-      - test -d dist/assets && echo "assets directory found" || echo "ERROR: assets directory not found"
+      - |
+        if [ -f dist/index.html ]; then
+          echo "index.html found"
+        else
+          echo "ERROR: index.html not found"
+        fi
+      - |
+        if [ -d dist/assets ]; then
+          echo "assets directory found"
+        else
+          echo "ERROR: assets directory not found"
+        fi
       - echo Build verification completed
 
 artifacts:
