buildspec.yml file bug fixed 3

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -33,9 +33,9 @@ phases:
       - echo Post-build phase...
       - echo Verifying build output...
       - echo Checking for index.html...
-      - test -f dist/index.html && echo "index.html found" || echo "ERROR: index.html not found"
+      - "ls -la dist/"
       - echo Checking for assets directory...
-      - test -d dist/assets && echo "assets directory found" || echo "ERROR: assets directory not found"
+      - "ls -la dist/assets/"
       - echo Build verification completed
 
 artifacts:
